Updated Server.percursosPossiveis